# flutter_embedder_engine

./: .gitignore  CMakeLists.txt  README.md
car_app/: pubspec.yaml
car_app/.dart_tool/: package_config.json  package_config_subset
car_app/.dart_tool/flutter_build/37230df8e0a283ada289c675cda972d4/: .filecache  copy_flutter_bundle.stamp  flutter_assets.d  gen_dart_plugin_registrant.stamp  kernel_snapshot.d  kernel_snapshot.stamp  native_assets.d  native_assets.stamp  outputs.json
car_app/lib/: main.dart
car_app/lib/mocks/: car_data_mock.dart
car_app/lib/ui/screens/: car_dashboard.dart
car_app/lib/ui/widgets/: alert_widget.dart  fuel_gauge_widget.dart  media_controls_widget.dart  speedometer_widget.dart
car_app/lib/utils/: simulate.dart
car_app/lib/viewmodels/: car_dashboard_viewmodel.dart
embedder/: FlutterEmbedderGLFW.cc
